* small fix for gstreamerplayer * fixed CSS so images don't overflow out of borders anymore * added another error trap in adding feeds
git-svn-id: https://svn.code.sf.net/p/penguintv/code/trunk@232 a0c6dda6-8710-0410-9408-9ac0bdba4c84

--- a/share/mozilla-planet-olpc.css
+++ b/share/mozilla-planet-olpc.css
@@ -33,6 +33,7 @@ body {
       background-color: #f5f7fa;
       margin-top: 12pt;
       padding: 6pt;
+      overflow: auto;
 }
 
 .entry_old {
@@ -42,6 +43,7 @@ body {
       background-color: #e0e3e8;
       margin-top: 12pt;
       padding: 6pt;
+      overflow: auto;
 }
 
 .stitle {
