--- a/share/mozilla-planet.css
+++ b/share/mozilla-planet.css
@@ -31,6 +31,7 @@ body {
       background-color: #f5f7fa;
       margin-top: 12pt;
       padding: 6pt;
+      overflow: auto;
 }
 
 .entry_old {
@@ -40,6 +41,7 @@ body {
       background-color: #e0e3e8;
       margin-top: 12pt;
       padding: 6pt;
+      overflow: auto;
 }
 
 .stitle {
